--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,11 +1,14 @@
 .bg-image{
     height: 100vh;
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 
 .mb-5{
-    margin-top: 10px;
-    font-weight: 800;
-    font-size: 70px;
+    margin-top: 100px;
+    /* font-weight: 800; */
+    font-size: 60px;
     color: #fff;
     margin-bottom: 40px;
     text-transform: uppercase;
