--- a/src/components/Navbars.css
+++ b/src/components/Navbars.css
@@ -1,18 +1,33 @@
-a.nav-link{
-    margin: 10px ;
+.navbar{
+    /* background-color: transparent; */
+    /* background-color: rgba(48, 48, 47, 0.39); */
+    color:#e0fbfc;
+    
+  
+  }
+  
+  .navbar.colorChange{
+    background-color: rgb(70, 66, 66);
+  }
+
+.nav-link a{
+    margin: 0px 15px;
+    font-size: 16px;
+    font-weight: 300;
     color: white;
+    text-decoration: none;
 }
 a.nav-link:hover{
     color: #ff1313;
 }
 
 .btn{
-    padding: 20px 25px;
+    padding: 10px;
     background: #ff1313;
     font-family: sans-serif;
     text-transform: uppercase;
     display: inline-block;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 300;
     /* letter-spacing: 1px; */
     border: #ff1313;
